fix(style): remove X scrollbar on landing page

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,8 @@
 body {
   margin: 0;
   min-height: 100vh;
+  max-width: 100vw;
+  overflow-x: hidden;
   background-color: var(--bg-dark-alt);
   background-image: radial-gradient(var(--bg-panel) 2px, transparent 3px);
   background-size: 30px 30px;
